Bürgerkonto ergänzt, Bugfix A-Z-Index

--- a/css/application.css
+++ b/css/application.css
@@ -1269,7 +1269,7 @@ div:not([class*="form-option-lst-show-title"]) label.error {
 }
 .mod-index-pages > div > h2 {
 	position: sticky;
-	z-index: 1;
+	z-index: 5;
 	inset-block-start: 0;
 	border-block-start: 1px solid #666;
 	padding: 0.25em;
@@ -1748,6 +1748,49 @@ div:not([class*="form-option-lst-show-title"]) label.error {
 }
 .c-dropdown__link:is(:hover, :focus) {
 	background-color: var(--clr-neutral-100);
+}
+
+/* =Bürgerkonto
+--------------------------------------------------------------- */
+.m-citizensaccount__dropdown {
+	width: 250px;
+    padding-block: 1em;
+    padding-inline: 0;
+	font-size: 0.85em;
+	background-color: #f6f4f3;
+    box-shadow: var(--shadow-md);
+}
+.m-citizensaccount__menu-title {
+	margin-block: 1em .5em;
+    padding-inline: 1em;
+    font-size: 1em;
+    font-weight: bold;
+	color: var(--color-secondary);
+}
+.citizensaccount__menu--account > .m-citizensaccount__menu-title {
+    margin-block-start: 0;
+}
+.m-citizensaccount__menu {
+    line-height: 1.2;
+}
+.m-citizensaccount__menu + .m-citizensaccount__menu {
+    margin-block-start: 0.75em;
+    border-top: 1px solid #000;
+}
+.m-citizensaccount__menu a {
+    display: block;
+    padding: .25em 1em;
+    color: var(--color-secondary);
+    text-decoration: none;
+}
+.m-citizensaccount__menu a:is(:hover, :focus) {
+    color: #000;
+    background-color: var(--clr-neutral-100);
+}
+.m-citizensaccount__logout {
+	margin-block-start: 1em;
+    padding-inline: 1em;
+	text-align: right;
 }
 
 /* =tags
